# cookiecutter-fast-api

./: LICENSE  cookiecutter.json  readme.md
{{cookiecutter.project_name}}/: .coveragerc  .flake8.cfg  .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yaml  dockerfile  pyproject.toml  readme.md
{{cookiecutter.project_name}}/.github/: CODEOWNERS
{{cookiecutter.project_name}}/local/: override-dev.env  override-docker-integration.env  override-docker.env  override.env  sandbox.py
{{cookiecutter.project_name}}/migrations/: env.py  readme.md  script.py.mako
{{cookiecutter.project_name}}/scripts/: entrypoint.sh  run_db_migration.sh  run_health_check.sh  run_integration_tests.sh  run_integration_tests_local.sh  run_tests.sh  run_tests_local.sh  setup.sh
{{cookiecutter.project_name}}/scripts/python/: db_migration.py  health_check.py
{{cookiecutter.project_name}}/tests/: pytest.env  pytest.ini
{{cookiecutter.project_name}}/tests/api/: conftest.py
{{cookiecutter.project_name}}/tests/api/test_{{cookiecutter.package_name}}/: test_api_main.py
{{cookiecutter.project_name}}/tests/api/test_{{cookiecutter.package_name}}/api/routes/: test_api_route_health.py
{{cookiecutter.project_name}}/tests/api/test_{{cookiecutter.package_name}}/core/app/: test_api_repeat.py
{{cookiecutter.project_name}}/tests/e2e/: conftest.py
{{cookiecutter.project_name}}/tests/e2e/test_{{cookiecutter.package_name}}/: test_e2e_main.py
{{cookiecutter.project_name}}/tests/e2e/test_{{cookiecutter.package_name}}/api/routes/: test_e2e_health.py
{{cookiecutter.project_name}}/tests/integration/: client.py  conftest.py  pytest_config_pro.py
{{cookiecutter.project_name}}/tests/integration/test_{{cookiecutter.package_name}}/api/resources/: rsrc_health.py
{{cookiecutter.project_name}}/tests/integration/test_{{cookiecutter.package_name}}/api/routes/: test_int_health.py
{{cookiecutter.project_name}}/tests/integration/test_{{cookiecutter.package_name}}/exceptions/: __init__.py  http.py
{{cookiecutter.project_name}}/tests/integration/test_{{cookiecutter.package_name}}/utils/none_safety/: __init__.py
{{cookiecutter.project_name}}/tests/mocks/: __init__.py  mock_general.py  mock_open_api.py
{{cookiecutter.project_name}}/tests/unit/: conftest.py
{{cookiecutter.project_name}}/tests/unit/test_{{cookiecutter.package_name}}/api/resources/: test_unit_rsrc_health.py  test_unit_rsrc_middleware.py
{{cookiecutter.project_name}}/tests/unit/test_{{cookiecutter.package_name}}/api/routes/: test_unit_health.py  test_unit_route_health.py
{{cookiecutter.project_name}}/tests/unit/test_{{cookiecutter.package_name}}/core/: test_unit_settings.py
{{cookiecutter.project_name}}/tests/unit/test_{{cookiecutter.package_name}}/core/app/: repeat.py  test_fast_auth_api_base.py  test_unit_app.py  test_unit_{{cookiecutter.package_name}}_base.py
{{cookiecutter.project_name}}/tests/unit/test_{{cookiecutter.package_name}}/core/cache/: test_unit_fast_api_context.py  test_unit_redis_manager.py
{{cookiecutter.project_name}}/tests/unit/test_{{cookiecutter.package_name}}/core/database/: test_unit_connection.py  test_unit_handler.py  test_unit_manager.py  test_unit_row_operations.py  test_unit_row_result.py  test_unit_row_results.py
{{cookiecutter.project_name}}/tests/unit/test_{{cookiecutter.package_name}}/core/open_api/: test_unit_open_api.py
{{cookiecutter.project_name}}/tests/unit/test_{{cookiecutter.package_name}}/exceptions/: test_http.py  test_unit_http.py
{{cookiecutter.project_name}}/tests/unit/test_{{cookiecutter.package_name}}/services/logger/: test_formatters.py  test_unit_config.py  test_unit_formatters.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: main.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/api/annotations/: __init__.py  annotations.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/api/dependencies/cache/: __init__.py  dep_redis.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/api/dependencies/database/: __init__.py  dep_database.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/api/dependencies/middleware/: __init__.py  dep_middleware.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/api/resources/: rsrc_health.py  rsrc_middleware.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/api/routes/: health.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/core/: settings.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/core/app/: __init__.py  app.py  lifespan.py  repeat.py  router.py  {{cookiecutter.package_name}}_base.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/core/cache/: __init__.py  fast_api_context.py  redis_manager.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/core/database/: __init__.py  connection.py  manager.py  row_operations.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/core/database/models/: table_base.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/core/database/tables/: __init__.py  table_base.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/core/open_api/: __init__.py  open_api.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/exceptions/: __init__.py  http.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/services/logger/: __init__.py  config.py  filters.py  formatters.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/utils/async_utils/: __init__.py  sync_to_async.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/utils/modules/path_extensions/: __init__.py  path_extensions.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/utils/modules/pydantic_utils/: __init__.py  pydantic_utils.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/utils/none_safety/: none_safety.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/utils/path_utils/: __init__.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/utils/pydantic_utils/: pydantic_utils.py
(+15 files in other folders)
