[tool.poetry]
name = "{{cookiecutter.project_name}}"
description = "{{cookiecutter.project_description}}"
version = "0.1.0"
license = "MIT"
authors = {{cookiecutter.project_authors}}

[tool.poetry.dependencies]
asyncpg = "^0.29.0"
concurrent-log-handler = "^0.9.24"
fastapi = "^0.111.0"
greenlet = "^3.0.3"
gunicorn = "^22.0.0"
httptools = "^0.6.1"
httpx = {extras = ["h2"], version = "^0.27.0"}
prometheus-fastapi-instrumentator = "^7.0.0"
pydantic = {extras = ["email"], version = "^2.7.4"}
pydantic-settings = "^2.3.3"
python = "^3.12"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
redis = {extras = ["hiredis"], version = "^5.0.6"}
requests = "^2.32.3"
SQLAlchemy = "^2.0.30"
tenacity = "^8.4.1"
types-redis = "^4.6.0.20240425"
uvicorn = "^0.30.1"
uvloop = "^0.19.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"
faker = "^25.8.0"
pre-commit = "^3.7.1"

[tool.poetry.group.test.dependencies]
locust = "^2.29.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"
exclude = """
/(
     \\.eggs
   | \\.git
   | \\.hg
   | \\.mypy_cache
   | \\.tox
   | \\.venv
   | _build
   | buck-out
   | build
   | dist
 )/
"""

[tool.isort]
known_first_party = ["{{cookiecutter.package_name}}", "migrations", "scripts", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_grid_wrap = 0
line_length = 100
multi_line_output = 3
ensure_newline_before_comments = "True"
include_trailing_comma = "True"
use_parentheses = "True"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings =["ignore::DeprecationWarning", "ignore::UserWarning"]
