[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
license = "MIT"
description = "{{cookiecutter.project_description}}"
authors = [{ name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" }]
requires-python = ">=3.13,<3.14.0"

# The dependencies required to run the application
dependencies = [
    "asyncpg(>=0.31.0,<0.32.0)",
    "cloud-sql-python-connector(>=1.19.0,<2.0.0)",
    "concurrent-log-handler(>=0.9.28,<1.0.0)",
    "fastapi(>=0.128.0,<1.0.0)",
    "greenlet(>=3.3.0,<4.0.0)",
    "gunicorn(>=26.0.0,<27.0.0)",
    "httptools(>=0.7.1,<1.0.0)",
    "httpx(>=0.28.0,<1.0.0)",
    "prometheus-fastapi-instrumentator(>=7.1.0,<8.0.0)",
    "pydantic[email](>=2.12.5,<3.0.0)",
    "pydantic-settings(>=2.12.0,<3.0.0)",
    "python-dotenv(>=1.2.1,<2.0.0)",
    "python-multipart(>=0.0.21,<1.0.0)",
    "redis[hiredis](>=7.1.0,<8.0.0)",
    "requests(>=2.32.5,<3.0.0)",
    "SQLAlchemy(>=2.0.45,<3.0.0)",
    "tenacity(>=9.1.2,<10.0.0)",
    "types-redis(>=4.6.0.20241004,<5.0.0)",
    "uvicorn(>=0.40.0,<1.0.0)",
    "uvicorn-worker(>=0.4.0,<1.0.0)",
    "uvloop(>=0.22.1,<1.0.0)",
]

# Optional dependencies for development, testing, and other tasks
[dependency-groups]
dev = [
    "faker(>=40.1.0,<41.0.0)",
    "locust(>=2.39.0,<3.0.0)",
    "pre-commit(>=4.5.0,<5.0.0)",
]
migration = [
    "alembic(>=1.17.2,<2.0.0)",
    "asyncpg(>=0.31.0,<0.32.0)",
    "cloud-sql-python-connector(>=1.12.1,<2.0.0)",
    "pydantic-settings(>=2.5.2,<3.0.0)",
]
test = [
    "pytest(>=9.0.2,<10.0.0)",
    "pytest-asyncio(>=1.3.0,<2.0.0)",
    "pytest-cov(>=7.0.0,<8.0.0)",
    "pytest-mock(>=3.14.0,<4.0.0)",
    "urllib3(>=2.7.0,<3.0.0)",
]

[tool.poetry]
# This section can remain empty or be removed unless you rely on
# Poetry-only features like plugins or build configuration

[tool.black]
line-length = 100
target-version = ["py313"]
include = "\\.pyi?$"
exclude = """
/(
     \\.eggs
   | \\.git
   | \\.hg
   | \\.mypy_cache
   | \\.tox
   | \\.venv
   | _build
   | buck-out
   | build
   | dist
 )/
"""

[tool.isort]
known_first_party = ["{{cookiecutter.package_name}}", "migrations", "scripts", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_grid_wrap = 0
line_length = 100
multi_line_output = 3
ensure_newline_before_comments = "True"
include_trailing_comma = "True"
use_parentheses = "True"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
filterwarnings = []
markers = [
    "external: Subset of integration tests that hit external APIs or services",
    "smoke: Subset of integration tests to run to ensure the health of the API"
]
