[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
license = "MIT"
description = "{{cookiecutter.project_description}}"
authors = [{ name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" }]
requires-python = ">=3.14,<3.15.0"

# The dependencies required to run the application
dependencies = [
    "asyncpg(>=0.31.0,<0.32.0)",
    "cloud-sql-python-connector(>=1.20.0,<1.21.0)",
    "concurrent-log-handler(>=0.9.0,<0.10.0)",
    "fastapi(>=0.136.0,<0.137.0)",
    "greenlet(>=3.5.0,<3.6.0)",
    "gunicorn(>=26.0.0,<26.1.0)",
    "httptools(>=0.8.0,<0.9.0)",
    "httpx(>=0.28.0,<0.29.0)",
    "prometheus-fastapi-instrumentator(>=8.0.0,<8.1.0)",
    "pydantic[email](>=2.13.0,<2.14.0)",
    "pydantic-settings(>=2.14.0,<2.15.0)",
    "python-dotenv(>=1.2.0,<1.3.0)",
    "python-multipart(>=0.0.32,<0.1.0)",
    "redis[hiredis](>=8.0.0,<8.1.0)",
    "requests(>=2.34.0,<2.35.0)",
    "SQLAlchemy(>=2.0.0,<2.1.0)",
    "tenacity(>=9.1.0,<9.2.0)",
    "uvicorn(>=0.49.0,<0.50.0)",
    "uvicorn-worker(>=0.4.0,<0.5.0)",
    "uvloop(>=0.22.0,<0.23.0)",
]

# Optional dependencies for development, testing, and other tasks
[dependency-groups]
dev = [
    "faker(>=40.21.0,<40.22.0)",
    "locust(>=2.44.0,<2.45.0)",
    "pre-commit(>=4.6.0,<4.7.0)",
]
migration = [
    "alembic(>=1.18.0,<1.19.0)",
    "asyncpg(>=0.31.0,<0.32.0)",
    "cloud-sql-python-connector(>=1.20.0,<1.21.0)",
    "pydantic-settings(>=2.14.0,<2.15.0)",
]
test = [
    "pytest(>=9.0.0,<9.1.0)",
    "pytest-asyncio(>=1.4.0,<1.5.0)",
    "pytest-cov(>=7.1.0,<7.2.0)",
    "pytest-mock(>=3.15.0,<3.16.0)",
    "urllib3(>=2.7.0,<2.8.0)",
]

# Pytest specifications
[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
filterwarnings = []
markers = [
    "external: Subset of integration tests that hit external APIs or services",
    "smoke: Subset of integration tests to run to ensure the health of the API"
]


# Black specifications
[tool.black]
line-length = 100
target-version = ["py314"]
include = "\\.pyi?$"
exclude = """
/(
     \\.eggs
   | \\.git
   | \\.hg
   | \\.mypy_cache
   | \\.tox
   | \\.venv
   | _build
   | buck-out
   | build
   | dist
 )/
"""

# ISort specifications
[tool.isort]
known_first_party = ["{{cookiecutter.package_name}}", "migrations", "scripts", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_grid_wrap = 0
line_length = 100
multi_line_output = 3
ensure_newline_before_comments = "True"
include_trailing_comma = "True"
use_parentheses = "True"
